Recria ConversorMoeda.java com parsing manual e sem bibliotecas externas